@@ -1,4 +1,4 @@
-# $Id: GNUmakefile,v 1.53 2007-03-04 18:07:04 nicm Exp $
+# $Id: GNUmakefile,v 1.54 2007-03-06 13:23:47 nicm Exp $
 
 .PHONY: clean
 
@@ -36,6 +36,7 @@ SRCS= fdm.c log.c xmalloc.c xmalloc-debug.c io.c replace.c connect.c mail.c \
       match-unmatched.c match-attachment.c child.c parent.c privsep.c attach.c \
       cleanup.c imap-common.c fetch-imappipe.c deliver-remove-header.c \
       deliver-stdout.c deliver-append-string.c strb.c deliver-add-header.c \
+      deliver-exec.c \
       y.tab.c lex.yy.c
 
 DEFS= -DBUILD="\"$(VERSION) ($(DATE))\""
